--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_icons: ^1.1.0
+  math_expressions: ^2.3.1
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
