--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   math_expressions: ^2.3.1
   google_fonts: ^3.0.1
   intl: ^0.17.0
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_test:
