--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -30,7 +30,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -40,6 +39,12 @@ dependencies:
   intl: ^0.17.0
   provider: ^6.0.3
   http: ^0.13.4
+  firebase_core: ^1.20.0
+  cloud_firestore: ^3.4.0
+  firebase_auth: ^3.5.0
+  firebase_messaging: ^12.0.1
+  firebase_storage: ^10.3.3
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
@@ -57,7 +62,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -68,7 +72,6 @@ flutter:
     - assets/google_fonts/
     - assets/tip.png
     - assets/
-    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
